Fixed problem with "overflow:hidden"

--- a/src/components/Navbar/NavbarMenu.css
+++ b/src/components/Navbar/NavbarMenu.css
@@ -1,4 +1,6 @@
 #menu {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   width: 800px;
   margin: -90px 0 0 -700px;
@@ -13,6 +15,8 @@
   transform: translate(100%, 0);
 
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  right: 0;
+  left: 0;
 }
 
 .menu-logo {
@@ -27,7 +31,7 @@
 .menu-content {
   transition: color 0.3s ease;
   font-size: 37px;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 .menu-content-text {
@@ -46,6 +50,10 @@
   display: inline-block;
   color: #d1898b;
   border-bottom: #d1898b 2px solid;
+}
+
+.menu-bottom {
+  margin-bottom: 200px;
 }
 
 .menu-bottom .footer-list {
