--- a/src/components/header/HeaderImages.css
+++ b/src/components/header/HeaderImages.css
@@ -23,6 +23,7 @@
 @media only screen and (max-width: 767px) {
   .header-images {
     display: flex;
+    flex-direction: row;
     align-items: center;
     width: 100%;
     margin-top: -5%;
